[gd_scene load_steps=4 format=3 uid="uid://q1xbyvts1yk4"]

[ext_resource type="Script" path="res://ui/StartMenu/StartMenu.gd" id="1_rxoc4"]
[ext_resource type="Theme" uid="uid://bi4f3b7qk68ct" path="res://ui/chinese_theme.tres" id="2_mdpa5"]

[sub_resource type="LabelSettings" id="LabelSettings_imyx7"]
font_size = 72

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxoc4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.0
offset_right = 23.0
offset_bottom = 99.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme = ExtResource("2_mdpa5")
text = "主界面"
label_settings = SubResource("LabelSettings_imyx7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -251.0
offset_right = 1940.0
offset_bottom = 5464.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)

[node name="StoryModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 3.13
theme = ExtResource("2_mdpa5")
theme_override_font_sizes/font_size = 500
text = "故事模式
"

[node name="WikiButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "图鉴"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "局外成长"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "设置"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 3.3
theme = ExtResource("2_mdpa5")
theme_override_font_sizes/font_size = 500
text = "退出游戏"

[node name="WikiButton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 4.77
theme = ExtResource("2_mdpa5")
theme_override_font_sizes/font_size = 500
text = "测试"

[node name="TextEdit" type="TextEdit" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 1600.0
offset_top = 690.0
offset_right = 4990.0
offset_bottom = 3820.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_mdpa5")
theme_override_font_sizes/font_size = 200
text = "上下左右移动
Z键确定
X键释放符卡
AS切换符卡
esc暂停
+号时间加速
shift看判定点"

[connection signal="pressed" from="VBoxContainer/StoryModeButton" to="." method="_on_story_mode_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WikiButton" to="." method="_on_wiki_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WikiButton2" to="." method="_on_test_pressed"]
